--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,13 @@ services:
         environment:
             CONFIG: |
                 {
-                  "0xc7F7528126C80341bB3340b73c72EFA4d1779d20": {
+                  "$ERC3668_RESOLVER_ADDRESS": {
                     "type": "optimism-bedrock",
                     "handlerUrl": "http://ens-data-source:8887",
                     "l1ProviderUrl": "$L1_PROVIDER_URL",
                     "l2ProviderUrl": "$L2_PROVIDER_URL",
                     "l1chainId": "5",
-                    "l2chainId": "420"
+                    "l2chainId": "$L2_CHAIN_ID"
                   }
                 }
         ports:
