--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ L2_OUTPUT_ORALCE_MAINNET='0xdfe97868233d1aa22e815a266982f2cf17685a27'
 # L2_OUTPUT_ORALCE_GOERLI="0x2A35891ff30313CcFa6CE88dcf3858bb075A2298"
 # L2_OUTPUT_ORALCE_MAINNET="0x56315b90c40730925ec5485cf004d835058518A0"
 DEFAULT_VERIFIER_URL="http://localhost:8081/{sender}/{data}"
+GRAPHQL_URL="http://localhost:8081/graphql"
 # Set address that funds the tx
 DEPLOYER_PRIVATE_KEY=""
 # Optimistic Etherscan API code to verify contracts
