--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "deploy:l2-resolver": "npx hardhat run deploy/l2/01_L2Public_Resolver.ts",
         "deploy:l1-resolver-verifier": "npx hardhat run ./deploy/l1/01_L2Public_Resolver_Verifier.ts",
         "deploy:l1-resolver": "npx hardhat run ./deploy/l1/02_ERC3668_Resolver.ts",
-        "start": "docker compose up -d "
+        "start": "docker compose up"
     },
     "files": [
         "dist/src/",
@@ -87,7 +87,7 @@
         "@ensdomains/ens-contracts": "^0.0.19",
         "@eth-optimism/contracts": "^0.5.40",
         "@eth-optimism/sdk": "^2.0.2",
-        "ccip-resolver": "0.2.1",
+        "ccip-resolver": "0.2.3",
         "cors": "^2.8.5",
         "ens-contracts-legacy": "https://github.com/ensdomains/resolvers.git#v0.1.7",
         "express": "^4.18.2",
